# master-thesis

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  nodemon.json  package-lock.json  package.json  script.py  tsconfig.json  tsoa.json
classify/: bundle_r.py  classify.py  pyproject.toml  script.py
compare/: compare.py  lol.yml  pyproject.toml  script.py
notebook-jupyter/: Dockerfile
notebook-jupyter/work/: chang_point_analysis.ipynb
notebook-jupyter/work/.ipynb_checkpoints/: chang_point_analysis-checkpoint.ipynb
reproduce_experiment/: script.py
src/: app.ts  routes.ts  server.ts  swagger.json
src/config/: database.ts
src/controllers/: Benchmark.controller.ts  BulkDataUpload.interface.ts  Criterion.controller.ts  Environment.controller.ts  Executor.controller.ts  Experiment.controller.ts  Measurement.controller.ts  Project.controller.ts  Run.controller.ts  SchemaVersion.controller.ts  SoftwareVersionInfo.controller.ts  Source.controller.ts  Suite.controller.ts  Timeline.controller.ts  Trial.controller.ts  Unit.controller.ts
src/models/: Benchmark.model.ts  Criterion.model.ts  Environment.model.ts  Executor.model.ts  Experiment.model.ts  Measurement.model.ts  Project.model.ts  Run.model.ts  SchemaVersion.model.ts  SoftwareUse.model.ts  SoftwareVersionInfo.model.ts  Source.model.ts  Suite.model.ts  Timeline.model.ts  Trial.model.ts  Unit.model.ts
