[tool.poetry]
name = "classify"
version = "0.1.0"
description = ""
authors = ["Quentin Sonnefraud <quentin.sonnefraud@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ruptures = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
