[tool.poetry]
name = "classify"
version = "0.1.0"
description = ""
authors = ["Quentin Sonnefraud <quentin.sonnefraud@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ruptures = "^1.0.5"
requests = "^2.24.0"
matplotlib = "^3.3.0"
pandas = "^1.1.0"
rpy2 = "^3.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
