[tool.poetry]
name = "compare"
version = "0.1.0"
description = ""
authors = ["Quentin Sonnefraud <quentin.sonnefraud@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
matplotlib = "^3.2.2"
numpy = "^1.19.0"
pandas = "^1.0.5"
similaritymeasures = "^0.4.3"
scipy = "^1.5.1"
dtw = "^1.4.0"
torch = "^1.6.0"
rdp = "^0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
